[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Obstacle.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Bounds.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/PuzzleLevel.gd" type="Script" id=4]
[ext_resource path="res://scenes/WinPlatform.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/InversionGlass.tscn" type="PackedScene" id=6]

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Bounds" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 100, 200 )
x_speed = 300
y_speed = 300

[node name="WinPlatform" parent="." instance=ExtResource( 5 )]
position = Vector2( 692.964, 567.571 )

[node name="InversionGlass" parent="." instance=ExtResource( 6 )]
position = Vector2( 429.333, 459.333 )

[node name="BaseObstacles" type="Node2D" parent="."]

[node name="BaseObstacle" parent="BaseObstacles" instance=ExtResource( 1 )]
position = Vector2( 500, 200 )

[node name="BaseObstacle3" parent="BaseObstacles" instance=ExtResource( 1 )]
position = Vector2( 759.904, 395.037 )

[connection signal="move_ended" from="Player" to="." method="_on_player_move_ended"]
[connection signal="apply_inversion" from="InversionGlass" to="." method="_on_apply_inversion"]
